@@ -135,6 +135,9 @@ Trunk - Unreleased
     HIVE-485. Fix join not to assume all columns are strings.
     (Namit Jain via zshao)
 
+    HIVE-488. Fix load partition for table with multiple partition columns.
+    (Prasad Chakka via athusoo)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
